--- a/Pipelines_with_Kafka.ipynb
+++ b/Pipelines_with_Kafka.ipynb
@@ -16,13 +16,13 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Uu0VZpP8obPG",
-        "outputId": "3233e881-2637-440a-9a01-bf668e6d6e93"
+        "outputId": "9087a666-11a5-4bb7-b174-d594ff2fb5a2"
       },
       "outputs": [
         {
@@ -30,11 +30,7 @@
           "name": "stdout",
           "text": [
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
-            "Collecting confluent-kafka\n",
-            "  Downloading confluent_kafka-2.1.1-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (3.9 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.9/3.9 MB\u001b[0m \u001b[31m28.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hInstalling collected packages: confluent-kafka\n",
-            "Successfully installed confluent-kafka-2.1.1\n"
+            "Requirement already satisfied: confluent-kafka in /usr/local/lib/python3.10/dist-packages (2.1.1)\n"
           ]
         }
       ],
@@ -50,7 +46,7 @@
       "metadata": {
         "id": "lsTCNA2Xoti-"
       },
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -63,7 +59,7 @@
       "metadata": {
         "id": "oZnNM_A1pDyl"
       },
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -81,7 +77,7 @@
       "metadata": {
         "id": "bLGNTLnMowNK"
       },
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -102,13 +98,13 @@
       "metadata": {
         "id": "07KYCBL3o9ai"
       },
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "producer.produce('topic_0', key='key1', value='Value')\n",
+        "producer.produce('topic_0', key='key1', value='{\"transaction_id\": \"12345\",\"sender_phone_number\": \"256777123456\",\"receiver_phone_number\": \"256772987654\",\"transaction_amount\": 100000,\"transaction_time\": \"2023-04-19 12:00:00\"}')\n",
         "producer.flush()"
       ],
       "metadata": {
@@ -116,9 +112,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6JDO8hVbsDWg",
-        "outputId": "644ac14e-0f70-4662-ce9c-29e5959a5fb1"
+        "outputId": "f01b356c-b469-4bdb-a0e1-a3b6f9e409d6"
       },
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -128,7 +124,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 7
         }
       ]
     },
@@ -147,30 +143,18 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 258
+          "base_uri": "https://localhost:8080/"
         },
         "id": "vupTVMFisWyC",
-        "outputId": "1b1dafc5-ee5e-44d4-9f56-dea7d36e6f09"
+        "outputId": "59e6d93c-3ec5-4258-d9b2-be271ba1f165"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Received message: Value\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "KeyboardInterrupt",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-7-f80a60fd73fe>\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mconsumer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msubscribe\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'topic_0'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mwhile\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0mmsg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mconsumer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpoll\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1.0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mmsg\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0;32mcontinue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+            "Received message: {\"transaction_id\": \"12345\",\"sender_phone_number\": \"256777123456\",\"receiver_phone_number\": \"256772987654\",\"transaction_amount\": 100000,\"transaction_time\": \"2023-04-19 12:00:00\"}\n"
           ]
         }
       ]
